--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+toml = "0.8.19"
+serde = "1.0.136"
+serde_derive = "1.0.136"
 raylib = "5.0.2"
 rand = "0.8"
